--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 
 //    compile group: 'org.locationtech.jts', name: 'jts-core', version: '1.15.1'
     compile group: 'org.locationtech.spatial4j', name: 'spatial4j', version: '0.7'
+    compile group: 'com.github.davidmoten', name: 'rtree', version: '0.8.6'
+
+    compile group: 'ch.hsr', name: 'geohash', version: '1.3.0'
 //    implementation 'com.beust:klaxon:3.0.1'
 
     compile 'io.github.microutils:kotlin-logging:1.5.9'
