--- a/build.gradle
+++ b/build.gradle
@@ -31,18 +31,19 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.24.0'
 
-//    compile group: 'org.locationtech.jts', name: 'jts-core', version: '1.15.1'
     compile group: 'org.locationtech.spatial4j', name: 'spatial4j', version: '0.7'
     compile group: 'com.github.davidmoten', name: 'rtree', version: '0.8.6'
 
     compile group: 'ch.hsr', name: 'geohash', version: '1.3.0'
-//    implementation 'com.beust:klaxon:3.0.1'
 
-    compile 'io.github.microutils:kotlin-logging:1.5.9'
-    compile 'io.github.cdimascio:java-dotenv:3.1.2'
     compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.11.0'
+//    compile 'io.github.microutils:kotlin-logging:1.5.9'
+//    compile 'io.github.cdimascio:java-dotenv:3.1.2'
+//    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+//    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.11.0'
+
+    testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit5', version: '1.2.60'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.3.0'
 }
 
 compileKotlin { kotlinOptions.jvmTarget = "1.8" }
