--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ def getVersion = { ->
     return dirty ? "${version}-SNAPSHOT" : version
 }
 
-group 'org.zmeng'
+group 'wfxr'
 version getVersion()
 
 buildscript {
@@ -30,7 +30,6 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    compile group: 'com.github.davidmoten', name: 'rtree', version: '0.8.6'
     compile group: 'ch.hsr', name: 'geohash', version: '1.3.0'
     compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
 
