--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+    testCompile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
     testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
