--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,10 @@ dependencies {
 
     compile group: 'ch.hsr', name: 'geohash', version: '1.3.0'
     compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
 
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
-    testCompile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
     testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
