--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     ext.junitVersion = "5.3.0"
 
     repositories {
+        maven { url 'http://mvn.slimjars.com' }
         mavenCentral()
         jcenter()
     }
@@ -34,6 +35,7 @@ dependencies {
     compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
     compile group: 'com.github.davidmoten', name: 'rtree', version: '0.8.6'
+    compile 'com.github.wfxr:jsi:2.1.1'
 
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
