--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
     compile group: 'com.github.davidmoten', name: 'rtree', version: '0.8.6'
     compile 'com.github.wfxr:jsi:2.1.1'
+    compile group: 'com.esotericsoftware', name: 'kryo', version: '4.0.2'
 
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
